# ITKSplitComponents

./: .gitattributes  .gitignore  CMakeLists.txt  IJMacros.txt  README.rst  azure-pipelines.yml  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build-test-package.yml
Article/: split_components.tex
Code/: CMakeLists.txt  SplitComponentsArgs.cxx  SplitComponentsArgs.h  TensorComponentsArgs.cxx  TensorComponentsArgs.h  itk-tensor-components.cxx  itkSplitComponentsImageFilter.h  itkSplitComponentsImageFilter.hxx  itkSplitComponentsImageFilter.txx  itkTensorComponentsImageFilter.h  itkTensorComponentsImageFilter.txx  itkVectorToComponentsImageFilter.h  itkVectorToComponentsImageFilter.txx  split-components.cxx  tensor-components.cxx
Testing/: CMakeLists.txt  itkSplitComponentsImageFilterTest.cxx  itkTensorComponentsImageFilterTest.cxx  itkVectorToComponentsImageFilterTest.cxx
Testing/Data/Baseline/: itkVectorToComponentsImageFilterTestBaseline0.mha  itkVectorToComponentsImageFilterTestBaseline1.mha
Testing/Data/Input/: testrgba.nrrd
apps/: CMakeLists.txt  SplitComponentsArgs.cxx  SplitComponentsArgs.h  split-components.cxx
article/: InsightJournal.sty  split_components.tex
binder/: requirements.txt
examples/: ITKSplitComponents.ipynb
include/: itkSplitComponentsImageFilter.h  itkSplitComponentsImageFilter.hxx
test/: CMakeLists.txt  itkSplitComponentsImageFilterTest.cxx
wrapping/: itkSplitComponentsImageFilter.wrap
